# QUARK-plugin-myqlm

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml  replace_names.yml
configs/: ghz_demo_cfg.yml
src/PLUGIN_NAME_FORMATTED/: __init__.py
src/demo/: ghz_cfg.yml
src/quark_plugin_myqlm/: __init__.py  devices.py  example_module.py  mappings.py
